# Homunculus

./: .gitignore  .project  CMakeLists.txt  HomunculusConfig.cmake.in  Makefile  README.md
include/: instance.hpp  neuron.hpp
src/: instance.cpp  main.cpp  neuron.cpp
